objects/Page_Copy__c.object
<CustomObject><fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Body_Copy__c</fullName>
        <inlineHelpText>This is the main page content to be displayed on the community page</inlineHelpText>
        <label>Body Copy</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Copy_Location__c</fullName>
        <inlineHelpText>Defines where the copy will be used</inlineHelpText>
        <label>Copy Location</label>
        <picklist>
            <picklistValues>
                <fullName>Applicant Homepage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Offer page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation of Place page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Homepage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Welcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submission Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Registration Terms Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Registration Data Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New User Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Link_1_Name__c</fullName>
        <inlineHelpText>Friendly name for Link 1 URL</inlineHelpText>
        <label>Link 1 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Link_1_URL__c</fullName>
        <label>Link 1 URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Link_2_Name__c</fullName>
        <inlineHelpText>Friendly name for Link 2 URL</inlineHelpText>
        <label>Link 2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Link_2_URL__c</fullName>
        <label>Link 2 URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Link_3_Name__c</fullName>
        <inlineHelpText>Friendly name for Link 3 URL</inlineHelpText>
        <label>Link 3 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Link_3_URL__c</fullName>
        <label>Link 3 URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Page_Status__c</fullName>
        <label>Page Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>For Sys Admin defined content, to be used in specific Visualforce pages, such as home pages in Community portals.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Read</externalSharingModel><label>Page Copy</label><nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Page Copy Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Page Copy</pluralLabel><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Page_Status__c</columns>
        <columns>Copy_Location__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Main_body_copy</fullName>
        <active>true</active>
        <description>Used for Welcome pages and similar, via Community</description>
        <label>Main body copy</label>
    </recordTypes><recordTypes>
        <fullName>Multi_part_copy</fullName>
        <active>true</active>
        <description>Used for confirmation letters/emails when presented via Community</description>
        <label>Multi-part copy</label>
    </recordTypes></CustomObject>